# stealth-1.0

./: .gitignore  LICENSE
Synthesis/: Dockerfile  (+1 more)
agent/: .env.example  README.md  pyproject.toml
agent/.stealth/: proposed_changes.json
agent/examples/: request.json
agent/stealth_agent/: __init__.py  app.py  cli.py  config.py  database.py  mappers.py  models.py  parsing.py  schemas.py  serve.py
agent/stealth_agent/adapters/: __init__.py  github.py  github_repo.py  llm.py  llm_adapters.py  local.py  protocols.py
agent/stealth_agent/domain/: models.py
agent/stealth_agent/middleware/: auth.py
agent/stealth_agent/routes/: chat.py  github_webhooks.py  indexing.py  orchestration.py
agent/stealth_agent/services/: apply_changes.py  change_parser.py  chat.py  chat_tools.py  code_chunker.py  code_indexer.py  code_retriever.py  embeddings.py  jobs.py  orchestrator.py  pr_files.py
agent/tests/: test_chat_service.py  test_orchestrator_smoke.py
synthesis/: .env.example  Dockerfile  README.md  alembic.ini  delete_user_workspace.sql  pyproject.toml
synthesis/alembic/versions/: 0003_agent_tables.py  0004_code_index_tables.py  0004_trigger_ingestion.py  0005_agent_conversation_uniqueness.py  0006_feature_request_embedding.py  0007_connector_webhook_token.py
synthesis/src/: config.py  main.py
synthesis/src/connectors/: base.py  catalog.py  figma.py  github.py  google_forms.py  granola.py  intercom.py  microsoft_teams.py  servicenow.py  slack.py  zendesk.py
synthesis/src/middleware/: auth.py
synthesis/src/models/: __init__.py  chat.py  connector.py  feature_request.py  job.py  signal.py  trigger.py  user.py
synthesis/src/processors/: text.py
synthesis/src/routes/: __init__.py  auth.py  chat.py  connectors.py  feature_requests.py  ingest.py  jobs.py  signals.py  synthesis.py  triggers.py
synthesis/src/schemas/: __init__.py  auth.py  chat.py  common.py  connector.py  feature_request.py  job.py  trigger.py
synthesis/src/services/: assemblyai.py  chat_tools.py  llm.py  r2.py  signal_builder.py  triggers.py
synthesis/src/synthesis/: cross_run_deduplicator.py  deduplicator.py  engine.py  engine_types.py  feature_extractor.py  prioritizer.py
synthesis/src/triggers/: __init__.py
synthesis/tests/test_connectors/: test_slack.py
synthesis/tests/test_processors/: test_text.py
synthesis/tests/test_routes/: test_auth.py  test_connectors.py  test_signals_search.py  test_synthesis_runs.py
synthesis/tests/test_services/: test_embeddings.py  test_triggers.py
(+216 files in other folders)
